--- a/web/index.html
+++ b/web/index.html
@@ -3,14 +3,40 @@
   <head>
     <title>Log reader</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure.css" />
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="side-menu-old-ie.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+        <link rel="stylesheet" href="side-menu.css">
+    <!--<![endif]-->
   </head>
   <body>
-    <input type="text" id="input-add-file"/><button id="btn-add-file">Ajouter</button>
-    <div id="tabs"></div>
-    <div id="logs">
+<div id="layout">
+    <!-- Menu toggle -->
+    <a href="#menu" id="menuLink" class="menu-link">
+        <span></span>
+    </a>
+
+    <div id="menu">
+        <div class="pure-menu pure-menu-open">
+            <a class="pure-menu-heading" href="/">Log Reader</a>
+
+            <ul id="tabs">
+                <li><input style="width:95%;" type="text" id="input-add-file"/></li>
+                <li><a href="#" id="btn-add-file">Follow new file</a></li>
+                <li>Followed Files</li>
+            </ul>
+        </div>
     </div>
-    <script type="text/javascript" src="zepto.min.js"></script>
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="client.js"></script>
+
+    <div id="main">
+      <div id="logs"></div>
+    </div>
+      <script type="text/javascript" src="/zepto.min.js"></script>
+      <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+      <script type="text/javascript" src="/client.js"></script>
+      <script src="/ui.js"></script>
   </body>
 </html>
