--- a/web/index.html
+++ b/web/index.html
@@ -24,19 +24,41 @@
             <a class="pure-menu-heading" href="/">Log Reader</a>
 
             <ul id="tabs">
-                <li><input style="width:95%;" type="text" id="input-add-file"/></li>
                 <li><a href="#" id="btn-add-file">Follow new file</a></li>
                 <li>Followed Files</li>
             </ul>
         </div>
     </div>
 
+    <div id="dialog">
+      <form class="pure-form pure-form-stacked" id="form-follow">
+        <fieldset>
+          <legend>Follow a new file</legend>
+
+          <input id="input-add-file" type="text" placeholder="File Path" />
+
+          <!--
+          <label for="filters">Filters</label>
+          <select id="filters" multiple="multiple">
+            <option>AL</option>
+            <option>CA</option>
+            <option>IL</option>
+          </select>
+          -->
+
+          <button type="submit" class="pure-button pure-button-primary">Follow</button>
+          <a href="#" class="pure-button" id="btn-cancel-add-file">Cancel</a>
+        </fieldset>
+      </form>
+    </div>
+
     <div id="main">
       <div id="logs"></div>
     </div>
-      <script type="text/javascript" src="/zepto.min.js"></script>
-      <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-      <script type="text/javascript" src="/client.js"></script>
-      <script src="/ui.js"></script>
+
+    <script type="text/javascript" src="/zepto.min.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/client.js"></script>
+    <script src="/ui.js"></script>
   </body>
 </html>
