--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
             <a class="pure-menu-heading" href="/">Log Reader</a>
 
             <ul id="tabs">
-                <li><a href="#" id="btn-add-file">Follow new file</a></li>
+                <li id="li-add-file"><a href="#" id="btn-add-file">Follow new file</a></li>
                 <li>Followed Files</li>
             </ul>
         </div>
