--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <title>Log reader</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure.css" />
+    <link rel="stylesheet" href="/pure.css" />
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="side-menu-old-ie.css">
     <![endif]-->
